fix x overflow css

--- a/main.css
+++ b/main.css
@@ -13,8 +13,8 @@ body {
     background-position: right bottom;
     background-repeat: none;
     background-size: cover;
-    width: 100%;
-}
+    width: 100vw;
+    }
 
 h2 {
     align-self: flex-start;
@@ -120,11 +120,10 @@ header {
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
-    width: 100%;
+    width: 96%;
     max-width: 1100px;
     margin-top: 15px;
     margin-bottom: 5px;
-    margin-left: 20px;
 }
 
 #long_info, #lat_info, #speed_info {
@@ -429,7 +428,9 @@ footer p {
         display: flex;
         flex-direction: row;
         justify-content: space-around;
-        margin-left: 0px;
+        align-items: center;
+        justify-items: center;
+        margin-left: 1%;
     }
 }
 
